--- a/SisMaper/Views/MainWindow.xaml
+++ b/SisMaper/Views/MainWindow.xaml
@@ -734,204 +734,12 @@
                         </StackPanel>
                     </ItemContainerTemplate>
                 </TabItem.HeaderTemplate>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition
-                            Height="110" />
-                        <RowDefinition
-                            Height="auto" />
-                    </Grid.RowDefinitions>
-                    <ToolBar
-                        Grid.Row="0"
-                        Style="{DynamicResource MainWindow.ToolBarStyle}"
-                        OverridesDefaultStyle="True"
-                        VerticalAlignment="Top">
-                        <RibbonGroup
-                            Header="Alterar Fatura">
-                            <StackPanel
-                                Orientation="Horizontal">
-                                <Button
-                                    Style="{DynamicResource Button1}"
-                                    Click="NovaFatura">
-                                    <StackPanel>
-                                        <icons:PackIconPixelartIcons
-                                            Kind="AddBox"
-                                            HorizontalAlignment="Center"
-                                            Foreground="Black"
-                                            Width="20"
-                                            Height="20" />
-                                        <TextBlock
-                                            Style="{DynamicResource Head1}"
-                                            Text="Novo" />
-                                    </StackPanel>
-                                </Button>
-                                <Button
-                                    Style="{DynamicResource Button1}">
-                                    <StackPanel>
-                                        <icons:PackIconModern
-                                            Kind="EditBox"
-                                            HorizontalAlignment="Center"
-                                            Foreground="Black"
-                                            Width="20"
-                                            Height="20" />
-                                        <TextBlock
-                                            Style="{DynamicResource Head1}"
-                                            Text="Editar" />
-                                    </StackPanel>
-                                </Button>
-                                <Button
-                                    Style="{DynamicResource Button1}">
-                                    <StackPanel>
-                                        <icons:PackIconMaterial
-                                            Kind="DeleteForever"
-                                            HorizontalAlignment="Center"
-                                            Foreground="Black"
-                                            Width="20"
-                                            Height="20" />
-                                        <TextBlock
-                                            Style="{DynamicResource Head1}"
-                                            Text="Excluir" />
-                                    </StackPanel>
-                                </Button>
-                            </StackPanel>
-                        </RibbonGroup>
-                        <Separator />
-                        <RibbonGroup
-                            Header="Filtrar"
-                            Width="489">
-                            <Grid>
-                                <TextBox
-                                    x:Name="FilterRecebimento"
-                                    Margin="7,46,3,0"
-                                    mah:TextBoxHelper.Watermark="Buscar fatura... (Ctrl + F)"
-                                    Background="{DynamicResource MahApps.Brushes.Gray9}"
-                                    BorderThickness="0"
-                                    Style="{DynamicResource TextBox.Search}"
-                                    Text="{Binding FiltroRecebimento, Delay=300, ElementName=userControl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                    Height="35"
-                                    VerticalAlignment="Top">
-                                    <TextBox.ToolTip>
-                                        <StackPanel>
-                                            <TextBlock
-                                                FontWeight="Bold"
-                                                Foreground="{DynamicResource MahApps.Brushes.Accent}"
-                                                Text="Filtro Avançado:" />
-                                            <TextBlock>
-                                                <Run
-                                                    Text="Insira o nome do Cliente para buscar" />
-                                            </TextBlock>
-                                            <TextBlock>
-                                                <Run
-                                                    Text="Ou digite o número do pedido" />
-                                            </TextBlock>
-                                        </StackPanel>
-                                    </TextBox.ToolTip>
-                                </TextBox>
-                                <ComboBox
-                                    x:Name="FiltrarTipoRecebimento"
-                                    FontSize="16"
-                                    Margin="7,4,0,0"
-                                    HorizontalAlignment="Left"
-                                    VerticalAlignment="Top"
-                                    Width="136"
-                                    mah:TextBoxHelper.Watermark="Status"
-                                    Height="39" />
-                                <DatePicker
-                                    FontSize="14"
-                                    HorizontalAlignment="Left"
-                                    Margin="210,4,0,0"
-
-                                    VerticalAlignment="Top"
-                                    Width="121"
-                                    mah:TextBoxHelper.Watermark="De"
-                                    mah:TextBoxHelper.UseFloatingWatermark="True"
-                                    VerticalContentAlignment="Center"
-                                    SelectedDate="2021-09-17"
-                                    Height="39" />
-                                <DatePicker
-                                    FontSize="14"
-                                    HorizontalAlignment="Left"
-                                    Margin="337,4,0,0"
-                                    VerticalAlignment="Top"
-                                    SelectedDate="2021-09-18"
-                                    Height="39"
-                                    mah:TextBoxHelper.UseFloatingWatermark="True"
-                                    Width="121"
-                                    mah:TextBoxHelper.Watermark="Até"
-                                    VerticalContentAlignment="Center" />
-                                <TextBlock
-                                    HorizontalAlignment="Left"
-                                    Margin="172,12,0,0"
-                                    FontSize="16"
-                                    TextWrapping="Wrap"
-                                    VerticalAlignment="Top"
-                                    Height="23"
-                                    Foreground="Black">
-                                    <Run
-                                        Language="pt-br"
-                                        Text="Data" />
-                                </TextBlock>
-                            </Grid>
-                        </RibbonGroup>
-                        <Separator />
-                    </ToolBar>
-                    <Border
-                        Grid.Row="1"
-                        BorderThickness="3"
-                        Margin="5"
-                        CornerRadius="5"
-                        BorderBrush="#FFC4C4C4">
-                        <DataGrid
-                            Style="{DynamicResource MahApps.Styles.DataGrid}"
-                            HorizontalContentAlignment="Stretch"
-                            ColumnWidth="*"
-                            x:Name="Faturas"
-                            ItemsSource="{Binding}"
-                            AutoGenerateColumns="False"
-                            CanUserAddRows="False"
-                            IsReadOnly="True"
-                            VerticalContentAlignment="Stretch"
-                            Margin="0,0,0,0"
-                            FontWeight="Regular">
-                            <DataGrid.Columns>
-                                <mah:DataGridNumericUpDownColumn
-                                    Width="17*"
-                                    Header="Id"
-                                    Binding="{Binding Id}"
-                                    IsReadOnly="True" />
-                                <DataGridTextColumn
-                                    Width="18*"
-                                    Header="Status"
-                                    Binding="{Binding Status}"
-                                    IsReadOnly="True" />
-                                <DataGridTextColumn
-                                    Width="25*"
-                                    Header="Data"
-                                    Binding="{Binding Data, StringFormat=\{0:dd/MM/yyyy\}}"
-                                    IsReadOnly="True" />
-                                <DataGridTextColumn
-                                    Width="100*"
-                                    Header="Cliente"
-                                    Binding="{Binding Cliente.Nome}"
-                                    IsReadOnly="True" />
-                                <mah:DataGridNumericUpDownColumn
-                                    Width="25*"
-                                    Header="Valor Total(R$)"
-                                    StringFormat="{}{0:N2}"
-                                    Culture="pt-BR"
-                                    Binding="{Binding ValorTotal}"
-                                    IsReadOnly="false" />
-                                <mah:DataGridNumericUpDownColumn
-                                    Width="35*"
-                                    Header="Valor Pago(R$)"
-                                    StringFormat="{}{0:N2}"
-                                    Culture="pt-BR"
-                                    Binding="{Binding ValorPago}"
-                                    IsReadOnly="false" />
-                            </DataGrid.Columns>
-                        </DataGrid>
-                    </Border>
-                </Grid>
+                <local:ViewRecebimentos
+                            Width="auto"
+                            Height="auto"
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Stretch"
+                            x:Name="RecebimentosView" />
             </TabItem>
             <TabItem
                 Style="{DynamicResource MainWindow.TabItem.Menu}"
@@ -974,8 +782,6 @@
                             Height="auto"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Stretch"
-                            MouseCommand="{Binding MCommand}"
-                            MouseCommandParameter="{Binding}"
                             x:Name="ProdutosView" />
                     </TabItem>
                     <TabItem
