Add API Protocol and Fix Pedido

--- a/SisMaper/Views/Style/Style.xaml
+++ b/SisMaper/Views/Style/Style.xaml
@@ -207,5 +207,101 @@
             </Setter>
         </Style>
 
+    <Style
+            x:Key="OptionsButtonStyle"
+            TargetType="{x:Type Button}">
+        <Setter
+                Property="FocusVisualStyle"
+                Value="{DynamicResource FocusVisual}" />
+        <Setter
+                Property="Foreground"
+                Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+        <Setter
+                Property="HorizontalContentAlignment"
+                Value="Center" />
+        <Setter
+                Property="VerticalContentAlignment"
+                Value="Center" />
+        <Setter
+                Property="Padding"
+                Value="10,4" />
+        <Setter
+                Property="FontSize"
+                Value="14" />
+        <Setter
+                Property="Height"
+                Value="31" />
+        <Setter
+                Property="Width"
+                Value="auto" />
+
+        <Setter
+                Property="Template">
+            <Setter.Value>
+                <ControlTemplate
+                        TargetType="{x:Type Button}">
+                    <Border
+                            x:Name="border"
+                            CornerRadius="3,3,3,3"
+                            BorderThickness="1"
+                            Background="{TemplateBinding Background}"
+                            SnapsToDevicePixels="true"
+                            Visibility="Visible"
+                            BorderBrush="#FF939393">
+                        <ContentPresenter
+                                x:Name="contentPresenter"
+                                Focusable="False"
+                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                Margin="{TemplateBinding Padding}"
+                                RecognizesAccessKey="True"
+                                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger
+                                Property="IsDefaulted"
+                                Value="true">
+                            <Setter
+                                    Property="BorderBrush"
+                                    TargetName="border"
+                                    Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+                        </Trigger>
+                        <Trigger
+                                Property="IsMouseOver"
+                                Value="true">
+                            <Setter
+                                    Property="BorderThickness"
+                                    TargetName="border"
+                                    Value="1" />
+                        </Trigger>
+                        <Trigger
+                                Property="IsPressed"
+                                Value="true">
+                            <Setter
+                                    Property="Background"
+                                    TargetName="border"
+                                    Value="{StaticResource Button.Pressed.Background}" />
+                        </Trigger>
+                        <Trigger
+                                Property="IsEnabled"
+                                Value="false">
+                            <Setter
+                                    Property="Background"
+                                    TargetName="border"
+                                    Value="{StaticResource Button.Disabled.Background}" />
+                            <Setter
+                                    Property="BorderBrush"
+                                    TargetName="border"
+                                    Value="{StaticResource Button.Disabled.Border}" />
+                            <Setter
+                                    Property="TextElement.Foreground"
+                                    TargetName="contentPresenter"
+                                    Value="{StaticResource Button.Disabled.Foreground}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
 </ResourceDictionary>
